# clavfrancais-engine

./: Cargo.toml  README.md
src/: char_buffer.rs  engine.rs  input_controller.rs  input_listener.rs  input_simulator.rs  keyboard_listener.rs  keys.rs  lib.rs  main.rs  mouse_listener.rs
src/char_buffer/: heap_sized_char_buffer.rs  mod.rs  resizable_char_buffer.rs  stack_sized_char_buffer.rs
src/windows/: engine.rs  input_listener.rs  input_simulator.rs  keyboard_listener.rs  keys_converter.rs  mod.rs
