[package]
name = "clavfrancais_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.5.0"
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58.0", features = ["Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse"] }
# winapi = { version = "0.3.9", features = ["winuser", "processthreadsapi"] }
